Recovered the prompt when avatar is too large, and fixed a bug which causes theme selection to fail

--- a/WebContent/css/chatroom-lucky.css
+++ b/WebContent/css/chatroom-lucky.css
@@ -7,6 +7,8 @@ html {
 }
 body {
 	text-align : center;
+	font-family: "Arial","新宋体","Microsoft YaHei UI","微软雅黑","黑体","宋体";
+	font-size : 16px;
 }
 .noscroll {
 	overflow-y: hidden !important;
@@ -26,6 +28,7 @@ frameset frame {
 	background: -moz-linear-gradient(top, #c9dbe9 0%, #fff 100%);
 }
 #sendframe {
+	padding:0;
 	background: #c9dbe9;
 	background: -webkit-linear-gradient(top, #fff 0%, #c9dbe9 100%);
 	background: -linear-gradient(top, #fff 0%, #c9dbe9 100%);
@@ -46,6 +49,7 @@ frameset frame {
 	color : black;
 	font-bold : bold;
 	text-align : left;
+	font-size : 12pt;
 }
 .warning {
 	color : red;
@@ -62,6 +66,7 @@ frameset frame {
 	float : center;
 }
 .sendarea {
+	margin : 0;
 	width : 100%;
 	height : 100%;
 }
@@ -121,6 +126,7 @@ frameset frame {
 }
 
 .smalllogo {
+	display : none;
 	float : center;
 	width : 90%;
 	opacity : 0;
@@ -195,6 +201,10 @@ frameset frame {
 .myuseravatar {
 	width : 100%;
 	height : auto;
+}
+#prevavatar {
+	height : 400px;
+	width : auto;
 }
 
 .cssselector {
@@ -420,4 +430,8 @@ html, .noscroll, .container { margin: 0; padding: 0;}
 }
 .clearfix:after {
   clear: both;
+}
+
+input[type="button"] {
+	font-size: 9pt;
 }
